sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:10: error: not found: value min
    if(plusPetit(min,i)){
                 ^AlgSelectionSort:11: error: not found: value min
      echange(min,i)
              ^