sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  for(i <- 0 to getNombreValeurs()-1 ){
    for (j <- i+1 to getNombreValeurs()-1){
      var min=i
      if(plusPetit(j,min)){
        min=j
      }
    }
    if(plusPetit(min,i)){
      echange(min,i)
    }
  }
}